new modification made

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
       <form action="" class="form">
         <div class="form-element">
           <input type="text" name="todo" id="todo" required />
-          <label for="todo">Todo</label>
+          <label for="todo">Todo:</label>
         </div>
         <div class="form-element">
+          <label for="time">Time:</label>
           <input type="datetime-local" name="time" id="time" required />
-          <label for="time">Time</label>
         </div>
         <button class="form-button" type="submit">Add</button>
       </form>
